corrected the dealer score not showing up until end.

--- a/public/css/style-d.css
+++ b/public/css/style-d.css
@@ -22,10 +22,11 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    
+    transition: 0.3s ease-in-out;
 }
 body.second-img {
     background-image: url("../images/game_play.gif");
+    transition: 0.3s ease-in-out;
 }
 
 
@@ -439,6 +440,24 @@ p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 8%;
 }
+.endGameContainer {
+     text-align:left;
+}
+.endGameResults {
+    transition: 0.3 ease-in-out;
+    padding: 1% 3% 1% 3%;
+    z-index: 2;
+    background: black;
+    color: gold;
+    border: 2px solid gold;
+    border-radius: 8%;
+    position: absolute;
+    right: 45%;
+    bottom: 0;
+    width: 150px;
+    max-width: 150px;
+    animation: fade-slideUp 2000ms;
+}
 
 #double {
     box-shadow: 0 0 0 #aaa;
@@ -472,6 +491,13 @@ p {
 @keyframes fade-slideLeft {
     0% {opacity: 0;
         transform: translateX(50px)  scale(0.9);}
+    100% {opacity: 1;
+        transform: translateX(0px)  scale(1);}
+
+}
+@keyframes fade-slideUp {
+    0% {opacity: 0;
+        transform: translatey(50px)  scale(0.9);}
     100% {opacity: 1;
         transform: translateX(0px)  scale(1);}
 
